pkg/lang/syntax/testdata/ub/validate/invalid/lock/hash-without-algorithm.ub
lock: {
  version: 1
  toolchain: {
    unobin-version: 'v0.4.2'
  }
  deps: {
    'example.com/ub-lib//network': {
      kind: ub
      version: 'v0.1.0'
      commit: 'abc123'
      hash: 'abc123'
    }
  }
}
